cabal-version:      3.0
name:               json-ld
version:            0.1.0.0
synopsis:           json-ld implementation for Haskell

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Kostas Dermentzis
maintainer:         k.dermenz@gmail.com

-- A copyright notice.
-- copyright:
category:           Data
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Data.JsonLD.Context
                      Data.JsonLD.Expand
                      Data.JsonLD.Util

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14
                    , aeson
                    , extra
                    , text
                    , containers
                    , vector
    hs-source-dirs:   src
    default-language: Haskell2010

executable json-ld
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14,
        json-ld

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite json-ld-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
